# NTK-interface

./: .gitignore  CMakeLists.txt  README.md  analysis.ipynb
Analysis/: Scaling.ipynb  Scaling_light.ipynb
Results/LargeNet_1000/: Data.yaml  meta.yaml
Results/LargeNet_1000/output/: Output_0.yaml  Output_1.yaml  Output_3.yaml
bash_script/: test.sh  test_2.sh  train.sh
cmake/: Coverage.cmake  Format.cmake
doc/latex/: UTPstyle.bst  chi2.tex
inc/NTK/: AnalyticCostFunction.h  IterationCallBack.h  NumericCostFunction.h  NumericalDerivative.h  Observable.h  Observable_imp.h  Observable_int.h  Timer.h  derive.h  direxists.h  utility.hpp  utility_test.hpp  version.h.in
inc/NTK/deprecated/: Observable.h  ObservableManager.h  Observables_old.h
run/: CMakeLists.txt  datagen.cc  train.cc
runcards/: LargeNet_1000.yaml  test.yaml  test_1000.yaml
runcards/240509_NTK_2nd_der/: 240509_GD10000_1_100_100_1.yaml  240509_GD10000_1_10_10_1.yaml  240509_GD10000_1_20_20_1.yaml  240509_GD10000_1_2_2_1.yaml  240509_GD10000_1_50_50_1.yaml  240509_GD10000_1_5_5_1.yaml  240509_GD10000_1_70_70_1.yaml
runcards/240521_NTK_O3_init/: 240521_GD5_1_100_100_1.yaml  240521_GD5_1_10_10_1.yaml  240521_GD5_1_20_20_1.yaml  240521_GD5_1_2_2_1.yaml  240521_GD5_1_50_50_1.yaml  240521_GD5_1_5_5_1.yaml  240521_GD5_1_70_70_1.yaml
src/: AnalyticCostFunction.cc  CMakeLists.txt  IterationCallBack.cc  NumericCostFunction.cc  NumericalDerivative.cc  Observable.cc  Observable.cpp
src/deprecated/: Observables.cc
test/: CMakeLists.txt  second_derivative.cc
test/derivatives_test/: CMakeLists.txt  derivative_benchmark.cpp  derivative_test.cpp
test/observable_test/: CMakeLists.txt  dNN_test.cpp  ddNN_test.cpp  observable_benchmark.cpp  observable_test.cpp  plain.cpp  porca_troia.cpp
test/std_test/: main.cpp
