add_executable(unit_derivative_test derivative_test.cpp)
target_link_libraries(unit_derivative_test PRIVATE NTK Catch2::Catch2WithMain)
catch_discover_tests(unit_derivative_test)

add_executable(derivative_benchmark derivative_benchmark.cpp)
target_link_libraries(derivative_benchmark PRIVATE NTK benchmark::benchmark)